ORCA-725-Play25 to Play28 Cookie verification

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,11 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "changeme"
+play.http.secret.key = "MFMj[wFNcEwif;hFjVO2LY=hg_]24i277Tncl`3?eM5NCDHZfdISHmsUpHgr5NYJ"
+play.http.session.cookieName="CHOPSHOP_SESSION"
+play.http.session.httpOnly=true
+play.http.session.maxAge=7d
+play.http.session.secure=${?SECURE_SESSION}
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
